Implement Hello World

--- a/packages/web/src/index.html
+++ b/packages/web/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    <your-app></your-app>
+    <main id="main"></main>
 
     <script type="module" src="./index.js"></script>
   </body>
