--- a/packages/web/src/index.html
+++ b/packages/web/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="./app-styles.css">
+  </head>
   <body>
     <main id="main"></main>
 
